Fix bug on vertical scrolling when the legends list is too big

--- a/src/plugins/vis_type_xy/public/_chart.scss
+++ b/src/plugins/vis_type_xy/public/_chart.scss
@@ -1,5 +1,11 @@
 .xyChart__container {
-  width: 100%;
-  height: 100%;
-  position: relative;
+  display: flex;
+  flex: 1 1 auto;
+  min-height: 0;
+  min-width: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
